# routes/countryRoutes.js
@@ -1,9 +1,12 @@
 const express = require('express');
 const router = express.Router();
 const countryController = require('../controllers/countryController');
-const multer = require('multer');
-const upload = multer({ dest: 'uploads/' });
 
-router.post('/create', upload.single('image'), countryController.createCountry);
+// CRUD Routes for Country
+router.post('/', countryController.createCountry);
+router.get('/', countryController.getAllCountries);
+router.get('/:id', countryController.getCountryById);
+router.put('/:id', countryController.updateCountry);
+router.delete('/:id', countryController.deleteCountry);
 
 module.exports = router;
